--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "eslint": "eslint .",
     "eslintfix": "eslint --fix ."
   },
-  "homepage": "https://github.com/anthony2303/monovan.git",
+  "homepage": "https://github.com/anthony2303/nekotina2.0.git",
   "author": {
     "name": "anthony2303"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/anthony2303/monovan.git"
+    "url": "https://github.com/anthony2303/nekotina2.0.git"
   },
   "bugs": {
-    "url": "https://github.com/anthony2303/monovan.git/issues"
+    "url": "https://github.com/anthony2303/nekotina2.0.git/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
